media/xteve/xteve-ingressroute.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: xteve-dashboard-tls
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`xteve.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: xteve
          port: 34400
          namespace: media
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: xteve-dashboard
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`xteve.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: xteve
          port: 34400
          namespace: media
